--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "4.9.5"
   },
   "dependencies": {
+    "@fastify/cors": "8.2.1",
     "@prisma/client": "4.11.0",
     "bcryptjs": "2.4.3",
     "fastify": "4.14.1",
