--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
-  "name": "nodetest",
+  "name": "03-api-solid",
   "version": "1.0.0",
+  "description": "GymPass style app.",
   "main": "index.js",
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
+    "@rocketseat/eslint-config": "1.2.0",
     "@types/bcryptjs": "2.4.2",
-    "@types/node": "18.15.3",
-    "prisma": "4.11.0",
+    "@types/node": "18.14.1",
+    "eslint": "8.34.0",
+    "prisma": "4.10.1",
     "tsup": "6.6.3",
-    "tsx": "3.12.5",
-    "typescript": "4.9.5"
+    "tsx": "3.12.3",
+    "typescript": "4.9.5",
+    "vite-tsconfig-paths": "4.0.5",
+    "vitest": "0.28.5"
   },
   "dependencies": {
     "@fastify/cors": "8.2.1",
-    "@prisma/client": "4.11.0",
+    "@prisma/client": "4.10.1",
     "bcryptjs": "2.4.3",
-    "fastify": "4.14.1",
-    "zod": "3.21.4"
+    "dotenv": "16.0.3",
+    "fastify": "4.13.0",
+    "zod": "3.20.6"
   }
 }
